DATACASS-699 - Introduce Docker for integration tests.

--- a/ci/openjdk11-8-cassandra-3.11/Dockerfile
+++ b/ci/openjdk11-8-cassandra-3.11/Dockerfile
@@ -17,3 +17,5 @@ RUN set -eux; \
 		rm -rf /tmp/openjdk.tar.gz;
 
 ENV PATH="/opt/java/openjdk8/bin:$PATH"
+ENV MAX_HEAP_SIZE=1500M
+ENV HEAP_NEWSIZE=300M
