--- a/ci/openjdk8-cassandra-3.11/Dockerfile
+++ b/ci/openjdk8-cassandra-3.11/Dockerfile
@@ -4,10 +4,13 @@ RUN set -eux; \
 	CASSANDRA_URL='https://www-us.apache.org/dist/cassandra/3.11.5/apache-cassandra-3.11.5-bin.tar.gz'; \
 	curl -LfsSo /tmp/cassandra.tar.gz ${CASSANDRA_URL}; \
 		mkdir -p /opt/cassandra; \
+		mkdir -p /opt/cassandra/data; \
+		mkdir -p /opt/cassandra/logs; \
 		cd /opt/cassandra; \
 		tar -xf /tmp/cassandra.tar.gz --strip-components=1; \
 		rm -rf /tmp/cassandra.tar.gz; \
 		chmod -R a+rwx /opt/cassandra;
+		useradd -d /home/jenkins-docker -m -u 1001 -U jenkins-docker;
 
 ENV MAX_HEAP_SIZE=1500M
 ENV HEAP_NEWSIZE=300M
