--- a/ci/openjdk11-8-cassandra-3.11/Dockerfile
+++ b/ci/openjdk11-8-cassandra-3.11/Dockerfile
@@ -3,9 +3,7 @@ FROM adoptopenjdk/openjdk11:latest
 RUN set -eux; \
 	CASSANDRA_URL='https://www-us.apache.org/dist/cassandra/3.11.5/apache-cassandra-3.11.5-bin.tar.gz'; \
 	curl -LfsSo /tmp/cassandra.tar.gz ${CASSANDRA_URL}; \
-		mkdir -p /opt/cassandra; \
-		mkdir -p /opt/cassandra/data; \
-		mkdir -p /opt/cassandra/logs; \
+		mkdir -p /opt/cassandra /opt/cassandra/data /opt/cassandra/logs; \
 		cd /opt/cassandra; \
 		tar -xf /tmp/cassandra.tar.gz --strip-components=1; \
 		rm -rf /tmp/cassandra.tar.gz; \
